# kraken-tools

./: .gitignore  CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  README.md
cpp/: CMakeLists.txt  nlohmann_output.csv  simdjson_output.csv
cpp/docs/: BLOCKING_VS_NONBLOCKING.md  CLI_UTILS_FEATURE_SUMMARY.md  CLI_UTILS_QUICK_REFERENCE.md  CLI_UTILS_REFACTORING.md  CLI_UTILS_TEXT_FILE_SUPPORT.md  CODE_REDUNDANCY_ANALYSIS.md  CRTP_REFACTORING_SUMMARY.md  CRTP_VS_BASE_CLASS_COMPARISON.md  DESIGN_DECISIONS_CRTP_REFACTORING.md  DEVELOPMENT_NOTES.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  EXAMPLES_README.md  FLOAT_VS_DOUBLE_ANALYSIS.md  HYBRID_CALLBACKS_DELIVERABLES.md  HYBRID_CALLBACKS_QUICK_REFERENCE.md  HYBRID_CALLBACKS_SUMMARY.md  JSON_LIBRARY_COMPARISON.md  LEVEL1_CRTP_REFACTORING.md  LEVEL2_DESIGN_SUMMARY.md  LEVEL2_MEMORY_MANAGEMENT_AND_SEGMENTATION.md  LEVEL2_MEMORY_MANAGEMENT_QUICK_REFERENCE.md  LEVEL2_ORDERBOOK_DESIGN.md  LEVEL3_IMPLEMENTATION_SUMMARY.md  LEVEL3_ORDERBOOK_DESIGN.md  MEMORY_MANAGEMENT_AND_SEGMENTATION.md  MEMORY_MANAGEMENT_CHANGELOG.md  MEMORY_MANAGEMENT_QUICK_REFERENCE.md  PERFORMANCE_EXPLANATION.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_CRTP_REFACTORING.md  README_REFACTORED.md  REFACTORING.md  RESTRUCTURING_SUMMARY.md  SIMDJSON_IMPLEMENTATION_SUMMARY.md  SIMDJSON_MIGRATION.md  SIMDJSON_USAGE_GUIDE.md  SUMMARY.md  (+8 more)
cpp/examples/: README_retrieve_kraken_live_data_level1.md  README_retrieve_kraken_live_data_level1_USAGE.md  example_callback_driven.cpp  example_hybrid_callbacks.cpp  example_integration.cpp  example_integration_cond.cpp  example_simdjson_comparison.cpp  example_simple_polling.cpp  example_template_version.cpp  process_level3_snapshots.cpp  process_orderbook_snapshots.cpp  retrieve_kraken_live_data_level1.cpp  retrieve_kraken_live_data_level2.cpp  retrieve_kraken_live_data_level3.cpp  sleep_vs_condition_variable.cpp  threading_examples.cpp
cpp/legacy/: query_live_data_v2.cpp  query_live_data_v2_nonblocking.cpp  query_live_data_v2_refactored.cpp  query_live_data_v2_standalone.cpp  query_live_data_v2_standalone_refactored.cpp
cpp/lib/: cli_utils.cpp  cli_utils.hpp  flush_segment_mixin.hpp  json_parser_nlohmann.hpp  json_parser_simdjson.hpp  jsonl_writer.cpp  jsonl_writer.cpp.backup  jsonl_writer.hpp  jsonl_writer.hpp.backup  kraken_book_client.hpp  kraken_common.cpp  kraken_common.hpp  kraken_level3_client.cpp  kraken_level3_client.hpp  kraken_websocket_client.cpp  kraken_websocket_client.hpp  kraken_websocket_client_base.hpp  kraken_websocket_client_base.hpp.backup  kraken_websocket_client_base_hybrid.hpp  kraken_websocket_client_simdjson.cpp  kraken_websocket_client_simdjson.hpp  kraken_websocket_client_simdjson_v2.hpp  kraken_websocket_client_simdjson_v2_hybrid.hpp  kraken_websocket_client_v2.hpp  level3_common.cpp  level3_common.hpp  level3_csv_writer.cpp  level3_csv_writer.hpp  level3_jsonl_writer.cpp  level3_jsonl_writer.hpp  level3_state.cpp  level3_state.hpp  orderbook_common.cpp  orderbook_common.hpp  orderbook_state.cpp  orderbook_state.hpp  snapshot_csv_writer.cpp  snapshot_csv_writer.hpp
data/: README.md
python/: README.md
python/rest_api/: find_missing_conversions.py  get_volume_all_pairs.py  list_all_pairs.py  simple_data.py  simple_query.py
python/schemas/: README.md  websocket_v2_ticker_schema.json
python/websocket/: krakenwsorderbookasync.py  query_live_data.py  query_live_data_v2.py  query_live_data_v2_validated.py
scripts/: test_retrieve_tool.sh
